k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-demoapp-deployment
  labels:
    app: java-demoapp
spec:
  replicas: 2  # İstediğin kadar replika sayısı
  selector:
    matchLabels:
      app: java-demoapp
  template:
    metadata:
      labels:
        app: java-demoapp
    spec:
      containers:
      - name: java-demoapp
        image: java-demoapp:latest  # Minikube Docker ortamında build ettiğin image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
