k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-demoapp-service
spec:
  type: NodePort
  selector:
    app: java-demoapp
  ports:
    - protocol: TCP
      port: 8080       # Kubernetes içindeki servis portu
      targetPort: 8080 # Container portu
      nodePort: 30080  # Dış erişim portu (30000-32767 arası)
