k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demoapp.local
      secretName: java-demoapp-tls
  rules:
    - host: demoapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-demoapp-service
                port:
                  number: 8080
